Changed the h3 to h2, and h5 to h3 to resolve accessibility issues. Fixed positioning and spacing.

--- a/main.css
+++ b/main.css
@@ -6,41 +6,34 @@
     --dark-grayish-blue: hsl(230, 11%, 40%);
     --grayish-blue: hsl(231, 7%, 65%);
     --light-grayish-blue: hsl(207, 33%, 95%);
+}
+/* *, *::before, *::after  */
+*{
     margin: 0;
     padding: 0;
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
-    font-size: 18px;
 }
 body {
-    margin: 0;
-    padding: 0;
     font-family: 'Barlow', sans-serif;
+    height: 100vh;
 }
 
 h1, h2, h3, a {
     font-family: 'Barlow Condensed', sans-serif;
 } 
-
 main, nav {
     display: flex;
     justify-content: space-between;
-    
 }
 nav {
     width: 80%;
-    margin: 50px auto 0;
+    margin: 60px auto 0;
     align-items: center;
-}
-main {
-    margin: 80px auto 80px;
 }
 .toggle-icon {
     display: none;
-}
-.hero-text, .hero {
-    flex: 1;
 }
 li {
     display: inline-block;
@@ -49,10 +42,10 @@ li {
 li a {
     margin-left: 40px;
     font-weight: 700;
-    padding: 10px;
     color: var(--very-dark-blue);
     text-transform: uppercase;
     text-decoration: none;
+    font-size: 14px;
 }
 .unique a {
     margin-left: 80px;
@@ -76,44 +69,51 @@ li:hover {
     text-decoration: underline;
     cursor: pointer;
 }
+main {
+    margin: 120px 0 0 10%;
+}
 .hero {
+    width: 53.125%;
     overflow: hidden;
 }
 .hero img {
-    position: relative;
     display: block;
-    left: -35px;
+    height: 455px;
+    width: auto;
 }
 .hero-text {
     justify-self: center;
-    margin: 50px 0 0 10%;
+    margin-top: 30px;
+    width: 35%;
 }
-h5 {
+h3 {
     text-transform: uppercase;
     color: var(--grayish-blue);
-    letter-spacing: 3px;
+    font-size: 14px;
+    letter-spacing: 4px;
     font-weight: 400;
 }
-h5 span {
+h3 span {
     background-color: var(--very-dark-blue);
     display: inline-block;
-    padding: 7px 15px;
-    border-radius: 15px;
+    padding: 7px 10px;
+    border-radius: 14px;
+    margin-right: 16px;
     color: var(--light-grayish-blue);
-    margin-right: 15px;
+    font-weight: 700;
 }
 h1 {
     text-transform: uppercase;
     font-weight: 700;
-    font-size: 4em;
-    margin: 10px 0 20px;
-    width: 90%;
+    font-size: 45px;
+    margin: 29px 0 45px 0;
 }
 
-h3 {
+p {
     color: var(--dark-grayish-blue);
-    font-size: 1.2em;
-    font-weight: 400;
+    font-size: 15px;
+    font-family: 'Barlow', sans-serif;
+    font-weight: 700;
     margin-bottom: 50px;
     width: 70%;
 }
@@ -121,151 +121,144 @@ h3 {
 button {
     color: var(--light-grayish-blue);
     background-color: var(--red);
-    padding: 20px;
+    font-size: 14px;
+    padding: 18px 34px;
     text-transform: uppercase;
     border: none;
     border-radius: 5px;
     cursor: pointer;
     font-weight: 700;
+    margin-right: 25px;
 }
 button:hover {
     opacity: 0.8;
-}
-.schedule h5 {
-    display: inline-block;
-    margin-left: 25px;
 }
 body::before {
     content: "";
     position: absolute;
     top: 0;
     right: 0;
-    width: 49%;
-    height: 50%;
+    width: 50%;
+    max-width: 700px;
+    height: 55%;
+    max-height: 425px;
     background-color: var(--light-grayish-blue);
     border-bottom-left-radius: 50px;
     z-index: -1;
 }
 
-@media screen and (max-width: 1270px) {
-    nav {
-        margin-top: 30px;
-    }
-    li a {
-        margin-left: 30px;
-        padding: 0;
-    }
-    main {
-        margin: 60px auto;
-    }
-    .hero-text {
-        margin-top: 30px;
-    }
-    .hero img {
-        width: auto;
-    }
-    h1 {
-        font-size: 3em;
-    }
-    h3 {
-        margin-bottom: 40px;
-    }
-    .schedule h5 {
-        margin-left: 10px;
-    }
+.attribution {
+    font-size: 11px; 
+    text-align: center;
+    margin: 10% auto 0;
 }
-@media screen and (max-width: 980px) {
-    nav {
-        width: 90%;
-        margin: 25px auto;
-    }
+.attribution a { 
+    color: hsl(228, 45%, 44%); 
+}
+
+@media screen and (max-width: 1150px) {
     main {
-        margin: 50px auto;
+        margin-top: 100px;
+    }
+    .hero img{
+        height: 400px;
     }
     .hero-text {
-        margin: 20px 0 0 5%;
-
+        width: 44%;
     }
     h3 {
-        margin-bottom: 30px;
-    }
-    h1 {
-        width: 95%;
+        letter-spacing: 3px;
     }
     button {
-        padding: 10px;
-    }
-    h5 {
-        letter-spacing: 1px;
+        margin-right: 15px;
     }
 }
-@media screen and (max-width: 800px){
+@media screen and (max-width: 1024px) {
+    nav {
+        width: 90%;
+        margin: 60px auto 0;
+    }
     main {
+        margin: 80px 0 0 5%;
+    }
+    nav {
+        margin-top: 40px;
+    }
+}
+
+@media screen and (max-width: 910px){
+
+    h1 {
+        font-size: 43px;
+    }
+    .hero img{
+        height: 400px;
+    }
+    h3 {
+        white-space: nowrap;
+    }
+}
+
+@media screen and (max-width: 760px) {
+    nav{
+        width: 84%;
+    }
+    main {
+        display: flex;
         flex-direction: column;
-        justify-content: center;
+        margin-left: 0;
     }
-    .hero, .hero-text {
-        flex: unset;
-        margin: 0 auto 20px;
-    }
-    .hero-text {
+    .hero {
         order: 1;
-        max-width: 80%;
-        margin: 0 auto;
+        width: 100%;
+        margin-left: 0;
     }
     .hero img {
-        max-width: 100%;
-        width: auto;
-        /* height: 40vh; */
-        left: 0;
+        height: 300px;
+        margin: 0 auto;
     }
     .hero-text {
+        margin-left: 8%;
         order: 2;
+        width: unset;
+        max-width: 100%;
     }
+    h1 {
+        font-size: 45px;
+        margin: 24px 0 28px 0;
+    }
+    h3, p {
+        font-size: 14px;
+    }
+    h3 {
+        letter-spacing: 3px;
+    }
+    p {
+        margin-bottom: 32px;
+    }
+    button {
+        padding: 15px 25px;
+    }
+
 }
-@media screen and (max-width: 570px) {
+@media screen and (max-width: 550px) {
+    main {
+        margin-top: 60px;
+    }
     .toggle-icon {
         display: inline-block;
     }
     .close-icon {
         display: none;
     }
-    nav {
-        margin: 20px auto 10px;
-    }
-    main {
-        margin: 0 auto;
-    }
-    .hero-text {
-        max-width: 90%;
-    }
-    .hero {
-        padding: 25px 0;
-        margin: 20px 0;
-    }
-    .hero img{
-        transform: scale(1.2);
-        left: 50px;
-    }
-    body::before {
-        height: 60%;
-        width: 60%;
-    }
-    h1 {
-        font-size: 2em;
-    }
-    h3 {
-        font-size: 1.2em;
-        width: 100%;
-    }
-    h5, button {
-        font-size: 0.7em;
+    .hero img {
+        margin: 0 0;
     }
     ul {
         position: absolute;
         top: 80px;
-        left: 5%;
-        width: 90%;
+        left: 8%;
+        width: 84%;
         margin: 0 auto;
         text-align: center;
         background-color: #fff;
@@ -293,10 +286,9 @@ body::before {
         height: 1px;
         top: -15px;
         left: 5%;
-        transform: translate(0,0);
     }
     .show-nav {
-        height: 205px;
+        height: 200px;
         opacity: 1;
         z-index: 2;
         pointer-events: all;
@@ -306,5 +298,22 @@ body::before {
     }
     .hide {
         display: none;
+    }
+}
+@media screen and (max-width: 400px) {
+    .hero img {
+        height:  240px;
+    }
+    h1 {
+        font-size: 28px;
+    }
+    h3 {
+        font-size: 11px;
+    }
+    p {
+        font-size: 13px;
+    }
+    button {
+        font-size: 10px;
     }
 }
